# modbus-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs  modbus.rs
src/modbus/rtu/: crc.rs
