[package]
name = "modbus"
version = "0.1.0"
authors = ["Gabriel Malkas <gabriel.malkas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "~2.33.1"
rust_decimal = "~1.6.0"
serialport = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
